# healthflow

./: .env.example  Makefile  README.md  bmad_qa_report.json  docker-compose.override.yml  docker-compose.yml  setup-github.sh
.docs/: ACP_CONFIGURATION.md  BMAD_COMPLIANCE.md  TECHNICAL_DEBT.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/application/dtos/: pagination.py
backend/src/application/interfaces/: repositories.py
backend/src/application/services/: __init__.py  appointment_service.py  chat_service.py  doctor_service.py  lab_result_service.py  medical_record_service.py  notification_service.py  patient_service.py  payment_service.py  review_service.py
backend/src/config/: settings.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: __init__.py  appointment.py  chat_message.py  doctor.py  lab_result.py  medical_record.py  notification.py  patient.py  payment.py  review.py
backend/src/infrastructure/database/: connection.py
backend/src/infrastructure/repositories/: __init__.py  appointment_repository.py  chat_repository.py  doctor_repository.py  lab_result_repository.py  medical_record_repository.py  notification_repository.py  patient_repository.py  payment_repository.py  review_repository.py
backend/src/interfaces/middleware/: rate_limit.py
backend/src/interfaces/routers/: __init__.py  appointments.py  chat.py  doctors.py  lab_results.py  notifications.py  patients.py  payments.py  reviews.py
backend/src/interfaces/schemas/: __init__.py  appointment.py  common.py  doctor.py  medical_record.py  patient.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_appointment_api.py  test_appointment_integration.py  test_doctor_api.py  test_medical_record_api.py  test_patient_api.py
backend/tests/unit/: test_appointment_entity.py  test_doctor_entity.py  test_patient_entity.py  test_repositories.py  test_services.py
database/: alembic.ini
frontend/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
scripts/: bmad-orchestrator.py  (+2 more)
(+61 files in other folders)
